src/blocks/profile.css
.profile {
  display: flex;
  padding: 34px 0 20px;
  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
}

.profile__avatar-container {
  position: relative;
  margin-right: 20px;
}

.profile__avatar {
  transition: filter 0.3s ease;
  box-sizing: border-box;
  height: 190px;
  width: 190px;
  border-radius: 8px;
  cursor: pointer;
}

.profile__avatar-btn {
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  background-color: transparent;
  border: none;
  padding: 0px;
  gap: 8px;
  padding-bottom: 12px;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  line-height: 100%;
  font-size: 16px;
  color: rgba(255, 255, 255, 01);
  cursor: pointer;
  z-index: 2;
}

.profile__column {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  max-width: 420px;
  width: 100%;
}

.profile__edit-btn {
  display: flex;
  gap: 8px;
  margin-top: auto;
  background-color: #fcf5ef;
  border: none;
  padding: 0;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  line-height: 100%;
  font-size: 16px;
  color: rgba(33, 33, 33, 0.7);
  cursor: pointer;
}

.profile__edit-btn:hover {
  color: rgba(33, 33, 33, 1);
}

.profile__edit-btn img {
  opacity: 0.7;
}

.profile__edit-btn:hover img {
  opacity: 1;
}

.profile__name {
  margin: 0 0 12px;
  width: 100%;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  line-height: 1;
  font-size: 32px;
  color: rgba(33, 33, 33, 1);
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.profile__description {
  width: 100px;
  margin: 0;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  line-height: 100%;
  font-size: 16px;
  color: rgba(33, 33, 33, 0.7);
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  max-width: 420px;
}

.profile__add-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: auto;
  margin-top: auto;
  gap: 8px;
  width: 149px;
  height: 53px;
  background-color: #212121;
  color: rgba(252, 245, 229, 1);
  font-family: Poppins, Arial, Helvetica, sans-serif;
  line-height: 100%;
  font-size: 16px;
  border-radius: 8px;
  border: none;
  cursor: pointer;
}

.profile__add-btn:hover {
  opacity: 0.4;
}

.profile__add-btn img {
  height: 12px;
  width: 12px;
}

@media screen and (min-width: 629px) {
  .profile__avatar-btn {
    opacity: 0;
  }
  .profile__avatar-container:hover .profile__avatar {
    filter: brightness(0.5);
  }

  .profile__avatar-container:hover .profile__avatar-btn {
    opacity: 1;
  }

  .profile__avatar-btn:hover::after {
    content: "Edit Avatar";
  }
}

@media screen and (max-width: 627px) {
  .profile {
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding-top: 20px 16px;
    max-width: 100% !important;
    margin: 0 auto;
    box-sizing: border-box;
  }

  .profile__column {
    margin: 0;
    align-items: center;
    text-align: center;
  }

  .profile__name {
    font-size: 20px;
    margin: 0 0 6px;
    max-width: none;
    width: 100px !important;
  }
  .profile__description {
    max-width: none;
  }
  .profile__edit-btn {
    margin-top: 20px 0 0;
    justify-content: center;
    width: 100%;
    font-size: 16px;
  }

  .profile__add-btn {
    margin: 20px 0 0;
    width: 100%;
    justify-content: center;
    margin-left: 0;
  }

  .profile__avatar-container {
    margin: 0 0 12px;
  }

  .profile__avatar-btn {
    opacity: 1 !important;
    pointer-events: auto;
    background-image: url(../images/pencil-icon-mobile.svg);
    background-repeat: no-repeat;
    background-position: 95% 73%;
  }

  .page_modal-opened .profile__avatar-btn {
    opacity: 0 !important;
    background-image: none;
  }

  .profile__avatar-btn img {
    display: none;
  }

  .profile__avatar-container:hover .profile__avatar {
    visibility: visible !important;
    filter: none;
  }

  .profile__avatar-btn:hover::after {
    content: none;
  }

  .profile__avatar {
    height: 80px;
    width: 80px;
    margin: 0 0 12px;
    object-fit: cover;
  }
}

